--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: myapp_production
-  username: dndshitake
-  password:
+  username: myapp
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
